<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="3">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="#EF5455"
            android:textSize="85sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/detail_screen_profile_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                app:srcCompat="@drawable/ic_baseline_account_circle_24" />

            <TextView
                android:id="@+id/details_screen_profile_select_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/popup_border"
                android:padding="7dp"
                android:text="@string/choose_image" />
        </LinearLayout>

        <EditText
            android:id="@+id/detail_screen_name_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_border"
            android:ems="10"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:maxHeight="12dp"
            android:padding="15dp" />

        <Button
            android:id="@+id/detail_entry_screen_continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button_border"
            android:minWidth="150dp"
            android:padding="15dp"
            android:text="@string/continue_button"
            android:textColor="@color/white" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>